--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -58,162 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Student ID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>94</td>\n",
-       "      <td>94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>95</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39165</td>\n",
-       "      <td>99</td>\n",
-       "      <td>90</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39166</td>\n",
-       "      <td>95</td>\n",
-       "      <td>70</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39167</td>\n",
-       "      <td>73</td>\n",
-       "      <td>84</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39168</td>\n",
-       "      <td>99</td>\n",
-       "      <td>90</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39169</td>\n",
-       "      <td>95</td>\n",
-       "      <td>75</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>29370 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            reading_score  math_score  School ID  size   budget\n",
-       "Student ID                                                     \n",
-       "0                      66          79          0  2917  1910635\n",
-       "4                      97          84          0  2917  1910635\n",
-       "5                      94          94          0  2917  1910635\n",
-       "6                      82          80          0  2917  1910635\n",
-       "8                      95          87          0  2917  1910635\n",
-       "...                   ...         ...        ...   ...      ...\n",
-       "39165                  99          90         14  1635  1043130\n",
-       "39166                  95          70         14  1635  1043130\n",
-       "39167                  73          84         14  1635  1043130\n",
-       "39168                  99          90         14  1635  1043130\n",
-       "39169                  95          75         14  1635  1043130\n",
-       "\n",
-       "[29370 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-3f7c882d646b>, line 23)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-3f7c882d646b>\"\u001b[1;36m, line \u001b[1;32m23\u001b[0m\n\u001b[1;33m    passing_overall.values()\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -226,17 +82,23 @@
     "# refer to the unmerged school_data set for list of school budgets\n",
     "total_budget = school_data[\"budget\"].sum()\n",
     "\n",
-    "# students[students['Family Name'] == 'Smith'].groupby('Gender').Grade.mean()\n",
-    "\n",
+    "# filter for math scores 70 or greater\n",
     "passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"Student ID\")\n",
     "pct_passing_math = school_data_complete[\"math_score\"].mean()\n",
+    "pct_passing_math\n",
+    "\n",
+    "# filter for reading scores 70 or greater\n",
+    "passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"Student ID\")\n",
+    "pct_passing_reading = school_data_complete[\"reading_score\"].mean()\n",
+    "pct_passing_reading\n",
+    "\n",
+    "# filter for math AND reading scores 70 or greater\n",
+    "passing_overall = school_data_complete[[school_data_complete[\"reading_score\"] >= 70] and [school_data_complete[\"math_score\"] >= 70].groupby(\"Student ID\")\n",
+    "# pct_passing_both = school_data_complete[\"reading_score\"].mean()\n",
     "\n",
     "\n",
-    "# good_movies_df = movie_file_df.loc[movie_file_df[\"IMDB\"] > 7, [\n",
-    "#     \"FILM\", \"IMDB\", \"IMDB_user_vote_count\"]]\n",
-    "#         good_movies_df.head()\n",
     "\n",
-    "# snapshot_df = pd.DataFrame({})\n",
+    "\n",
     "# school_data_complete.head()\n",
     "\n",
     "# Creating a summary DataFrame using above values\n",
