--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-3f7c882d646b>, line 23)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-27-71f3c7e09725>, line 35)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-3f7c882d646b>\"\u001b[1;36m, line \u001b[1;32m23\u001b[0m\n\u001b[1;33m    passing_overall.values()\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-71f3c7e09725>\"\u001b[1;36m, line \u001b[1;32m35\u001b[0m\n\u001b[1;33m    #                            \"Total Dash Volume\": str(dash_volume)+\" million\"})\u001b[0m\n\u001b[1;37m                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
