--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-27-71f3c7e09725>, line 35)",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'format'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-71f3c7e09725>\"\u001b[1;36m, line \u001b[1;32m35\u001b[0m\n\u001b[1;33m    #                            \"Total Dash Volume\": str(dash_volume)+\" million\"})\u001b[0m\n\u001b[1;37m                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-51b72df793f8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m district_summary_df = pd.DataFrame({\"Total Schools\": [school_sum],\n\u001b[0;32m     27\u001b[0m                                    \u001b[1;34m\"Total Students\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mstudent_sum\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m                                    \u001b[1;34m\"Total Budget\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtotal_budget\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{:.2%}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m                                    \"Average Math Score\": [avg_math]})\n\u001b[0;32m     30\u001b[0m \u001b[0mdistrict_summary_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'format'"
      ]
     }
    ],
@@ -93,21 +96,16 @@
     "pct_passing_reading\n",
     "\n",
     "# filter for math AND reading scores 70 or greater\n",
-    "passing_overall = school_data_complete[[school_data_complete[\"reading_score\"] >= 70] and [school_data_complete[\"math_score\"] >= 70].groupby(\"Student ID\")\n",
-    "# pct_passing_both = school_data_complete[\"reading_score\"].mean()\n",
-    "\n",
-    "\n",
-    "\n",
+    "passing_overall = len(school_data_complete.loc[(school_data_complete[\"reading_score\"] >= 70) & (school_data_complete[\"math_score\"] >= 70)])/student_sum*100\n",
     "\n",
     "# school_data_complete.head()\n",
     "\n",
     "# Creating a summary DataFrame using above values\n",
-    "# summary_df = pd.DataFrame({\"Best Bitcoin Open\": [bitcoin_open],\n",
-    "#                            \"Best Bitcoin Close\": [bitcoin_close],\n",
-    "#                            \"Total Bitcoin Volume\": str(bitcoin_volume)+\" million\",\n",
-    "#                            \"Best Dash Open\": [dash_open],\n",
-    "#                            \"Best Dash Close\": [dash_close],\n",
-    "#                            \"Total Dash Volume\": str(dash_volume)+\" million\"})"
+    "district_summary_df = pd.DataFrame({\"Total Schools\": [school_sum],\n",
+    "                                   \"Total Students\": [student_sum],\n",
+    "                                   \"Total Budget\": [total_budget].format(\"{:.2%}\"),\n",
+    "                                   \"Average Math Score\": [avg_math]})\n",
+    "district_summary_df"
    ]
   },
   {
