--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -208,118 +208,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>type</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Studets</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Victor Smith</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Kevin Rodriguez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>90</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Dr. Richard Scott</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>67</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>0        District\n",
+       "1        District\n",
+       "2        D...</td>\n",
+       "      <td>39170</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Student ID       student_name gender grade        school_name  \\\n",
-       "0           0       Paul Bradley      M   9th  Huang High School   \n",
-       "1           1       Victor Smith      M  12th  Huang High School   \n",
-       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
-       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
-       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
-       "\n",
-       "   reading_score  math_score  School ID      type  size   budget  \n",
-       "0             66          79          0  District  2917  1910635  \n",
-       "1             94          61          0  District  2917  1910635  \n",
-       "2             90          60          0  District  2917  1910635  \n",
-       "3             67          58          0  District  2917  1910635  \n",
-       "4             97          84          0  District  2917  1910635  "
+       "                                         School Type  Total Studets\n",
+       "0  0        District\n",
+       "1        District\n",
+       "2        D...          39170"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Groupby school_name\n",
+    "school_summary_df = school_data_complete.groupby(school_data_complete[\"school_name\"])\n",
+    "# school_summary_df.first()\n",
     "\n",
+    "# define variables that will populate the summary dataframe\n",
+    "school_type = school_data_complete[\"type\"]\n",
+    "school_student_count = \n",
+    "per_student_budget = school_data_complete[\"budget\"]/ school_student_count\n",
+    "school_avg_math = \n",
+    "school_avg_reading = \n",
+    "school_pct_pass_math = \n",
+    "school_pct_pass_reading = \n",
+    "school_passing_overall = \n",
     "\n",
+    "# Create overview table to summarize all the metrics\n",
+    "school_summary_df = pd.DataFrame({\"School Type\": [school_type],\n",
+    "                                   \"Total Students\": [student_sum],\n",
+    "                                   \"Total School Budget\": [per_student_budget],\n",
+    "                                   \"Average Math Score\": [school_avg_math],\n",
+    "                                   \"Average Reading Score\": [school_avg_reading],\n",
+    "                                   \"% Passing Math\": [school_pct_pass_math],\n",
+    "                                   \"% Passing Reading\": [school_pct_pass_reading],\n",
+    "                                   \"% Passing Overall\": [school_passing_overall]})\n",
+    "school_summary_df\n",
     "# school_data_complete.head()"
    ]
   },
