--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -210,82 +210,146 @@
        "      <th></th>\n",
        "      <th>School Name</th>\n",
        "      <th>School Type</th>\n",
-       "      <th>Total Students</th>\n",
-       "      <th>Total School Budget</th>\n",
-       "      <th>Average Math Score</th>\n",
-       "      <th>Average Reading Score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0         Huang High School\n",
-       "1         Huang Hi...</td>\n",
-       "      <td>0        District\n",
-       "1        District\n",
-       "2        D...</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>0        48.778019\n",
-       "1        48.778019\n",
-       "2       ...</td>\n",
-       "      <td>78.985371</td>\n",
-       "      <td>81.87784</td>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>4976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Cabrera High School</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>1858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>2949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ford High School</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>2739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Griffin High School</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>1468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hernandez High School</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>4635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Holden High School</td>\n",
+       "      <td>427</td>\n",
+       "      <td>427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>2917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>4761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Pena High School</td>\n",
+       "      <td>962</td>\n",
+       "      <td>962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>3999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>1761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Wilson High School</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>2283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>1800</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         School Name  \\\n",
-       "0  0         Huang High School\n",
-       "1         Huang Hi...   \n",
-       "\n",
-       "                                         School Type  Total Students  \\\n",
-       "0  0        District\n",
-       "1        District\n",
-       "2        D...           39170   \n",
-       "\n",
-       "                                 Total School Budget  Average Math Score  \\\n",
-       "0  0        48.778019\n",
-       "1        48.778019\n",
-       "2       ...           78.985371   \n",
-       "\n",
-       "   Average Reading Score  \n",
-       "0               81.87784  "
+       "                       School Name  School Type\n",
+       "school_name                                    \n",
+       "Bailey High School            4976         4976\n",
+       "Cabrera High School           1858         1858\n",
+       "Figueroa High School          2949         2949\n",
+       "Ford High School              2739         2739\n",
+       "Griffin High School           1468         1468\n",
+       "Hernandez High School         4635         4635\n",
+       "Holden High School             427          427\n",
+       "Huang High School             2917         2917\n",
+       "Johnson High School           4761         4761\n",
+       "Pena High School               962          962\n",
+       "Rodriguez High School         3999         3999\n",
+       "Shelton High School           1761         1761\n",
+       "Thomas High School            1635         1635\n",
+       "Wilson High School            2283         2283\n",
+       "Wright High School            1800         1800"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Groupby school_name\n",
-    "school_summary_df = school_data_complete.groupby(\"school_name\")\n",
+    "grouped_school_df = school_data_complete.groupby(\"school_name\")\n",
     "\n",
     "# define variables that will populate the summary dataframe\n",
-    "school_name = school_data_complete[\"school_name\"]\n",
-    "school_type = school_data_complete[\"type\"]\n",
-    "# school_student_count = school_data_complete[\"student id\"].count()\n",
-    "per_student_budget = school_data_complete[\"budget\"]/ student_sum\n",
-    "school_avg_math = school_data_complete[\"math_score\"].mean()\n",
-    "school_avg_reading = school_data_complete[\"reading_score\"].mean()\n",
-    "# school_pct_pass_math = \n",
-    "# school_pct_pass_reading = \n",
-    "# school_passing_overall = \n",
+    "school_name = grouped_school_df[\"school_name\"].count()\n",
+    "school_type = grouped_school_df[\"type\"].count()\n",
+    "# school_student_count = school_data_complete[\"Student ID\"].count()\n",
+    "# per_student_budget = school_data_complete[\"budget\"]/ student_sum\n",
+    "# school_avg_math = school_data_complete[\"math_score\"].mean()\n",
+    "# school_avg_reading = school_data_complete[\"reading_score\"].mean()\n",
+    "# # school_pct_pass_math = \n",
+    "# # school_pct_pass_reading = \n",
+    "# # school_passing_overall = \n",
     "\n",
-    "# Create overview table to summarize all the metrics\n",
-    "school_summary_df = pd.DataFrame({\"School Name\": [school_name],\n",
-    "                                  \"School Type\": [school_type],\n",
-    "                                  \"Total Students\": [student_sum],\n",
-    "                                   \"Total School Budget\": [per_student_budget],\n",
-    "                                   \"Average Math Score\": [school_avg_math],\n",
-    "                                   \"Average Reading Score\": [school_avg_reading]})\n",
+    "# # Create overview table to summarize all the metrics\n",
+    "school_summary_df = pd.DataFrame({\"School Name\": school_name,\n",
+    "                                  \"School Type\": school_type\n",
+    "#                                   \"Total Students\": student_sum\n",
+    "#                                    \"Total School Budget\": [per_student_budget],\n",
+    "#                                    \"Average Math Score\": [school_avg_math],\n",
+    "#                                    \"Average Reading Score\": [school_avg_reading]})\n",
     "#                                    \"% Passing Math\": [school_pct_pass_math],\n",
     "#                                    \"% Passing Reading\": [school_pct_pass_reading],\n",
-    "#                                    \"% Passing Overall\": [school_passing_overall]})\n",
-    "school_summary_df\n",
-    "# school_data_complete.head()"
+    "#                                    \"% Passing Overall\": [school_passing_overall]\n",
+    "                        })\n",
+    "\n",
+    "school_summary_df"
    ]
   },
   {
