--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -184,142 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>School Name</th>\n",
-       "      <th>School Type</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>school_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>Bailey High School</td>\n",
-       "      <td>4976</td>\n",
-       "      <td>4976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Cabrera High School</td>\n",
-       "      <td>1858</td>\n",
-       "      <td>1858</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Figueroa High School</td>\n",
-       "      <td>2949</td>\n",
-       "      <td>2949</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Ford High School</td>\n",
-       "      <td>2739</td>\n",
-       "      <td>2739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Griffin High School</td>\n",
-       "      <td>1468</td>\n",
-       "      <td>1468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Hernandez High School</td>\n",
-       "      <td>4635</td>\n",
-       "      <td>4635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Holden High School</td>\n",
-       "      <td>427</td>\n",
-       "      <td>427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>2917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Johnson High School</td>\n",
-       "      <td>4761</td>\n",
-       "      <td>4761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Pena High School</td>\n",
-       "      <td>962</td>\n",
-       "      <td>962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Rodriguez High School</td>\n",
-       "      <td>3999</td>\n",
-       "      <td>3999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Shelton High School</td>\n",
-       "      <td>1761</td>\n",
-       "      <td>1761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Wilson High School</td>\n",
-       "      <td>2283</td>\n",
-       "      <td>2283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Wright High School</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>1800</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       School Name  School Type\n",
-       "school_name                                    \n",
-       "Bailey High School            4976         4976\n",
-       "Cabrera High School           1858         1858\n",
-       "Figueroa High School          2949         2949\n",
-       "Ford High School              2739         2739\n",
-       "Griffin High School           1468         1468\n",
-       "Hernandez High School         4635         4635\n",
-       "Holden High School             427          427\n",
-       "Huang High School             2917         2917\n",
-       "Johnson High School           4761         4761\n",
-       "Pena High School               962          962\n",
-       "Rodriguez High School         3999         3999\n",
-       "Shelton High School           1761         1761\n",
-       "Thomas High School            1635         1635\n",
-       "Wilson High School            2283         2283\n",
-       "Wright High School            1800         1800"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "Cannot access callable attribute 'loc' of 'DataFrameGroupBy' objects, try using the 'apply' method",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-112-4ab731d0264f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# filter for math scores 70 or greater\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mschool_passing_math\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrouped_school_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgrouped_school_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"math_score\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Student ID\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[0mschool_pct_pass_math\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mschool_passing_math\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschool_student_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    561\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 563\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_wrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    564\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m         raise AttributeError(\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m_make_wrapper\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    602\u001b[0m                 \u001b[1;34m\"using the 'apply' method\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    603\u001b[0m             )\n\u001b[1;32m--> 604\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    605\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    606\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_group_selection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: Cannot access callable attribute 'loc' of 'DataFrameGroupBy' objects, try using the 'apply' method"
+     ]
     }
    ],
    "source": [
@@ -327,28 +206,44 @@
     "grouped_school_df = school_data_complete.groupby(\"school_name\")\n",
     "\n",
     "# define variables that will populate the summary dataframe\n",
-    "school_name = grouped_school_df[\"school_name\"].count()\n",
-    "school_type = grouped_school_df[\"type\"].count()\n",
-    "# school_student_count = school_data_complete[\"Student ID\"].count()\n",
-    "# per_student_budget = school_data_complete[\"budget\"]/ student_sum\n",
-    "# school_avg_math = school_data_complete[\"math_score\"].mean()\n",
-    "# school_avg_reading = school_data_complete[\"reading_score\"].mean()\n",
-    "# # school_pct_pass_math = \n",
-    "# # school_pct_pass_reading = \n",
-    "# # school_passing_overall = \n",
+    "# school_name = grouped_school_df[\"school_name\"].count()\n",
+    "school_type = grouped_school_df[\"type\"].unique()\n",
+    "school_student_count = grouped_school_df[\"Student ID\"].count()\n",
+    "school_budget = grouped_school_df[\"budget\"].unique()\n",
+    "per_student_budget = school_budget / school_student_count\n",
+    "school_avg_math = grouped_school_df[\"math_score\"].mean()\n",
+    "school_avg_reading = grouped_school_df[\"reading_score\"].mean()\n",
     "\n",
-    "# # Create overview table to summarize all the metrics\n",
-    "school_summary_df = pd.DataFrame({\"School Name\": school_name,\n",
-    "                                  \"School Type\": school_type\n",
-    "#                                   \"Total Students\": student_sum\n",
-    "#                                    \"Total School Budget\": [per_student_budget],\n",
-    "#                                    \"Average Math Score\": [school_avg_math],\n",
-    "#                                    \"Average Reading Score\": [school_avg_reading]})\n",
-    "#                                    \"% Passing Math\": [school_pct_pass_math],\n",
+    "# filter for math scores 70 or greater\n",
+    "school_passing_math = grouped_school_df.loc[grouped_school_df[\"math_score\"] >= 70].count()[\"Student ID\"]\n",
+    "school_pct_pass_math = school_passing_math / float(school_student_count)*100\n",
+    "\n",
+    "# filter for reading scores 70 or greater\n",
+    "# passing_reading = school_data_complete.loc[school_data_complete[\"reading_score\"] >= 70].count()[\"Student ID\"]\n",
+    "# pct_passing_reading = passing_reading / float(student_sum)*100\n",
+    "\n",
+    "# filter for math AND reading scores 70 or greater\n",
+    "# passing_overall = len(school_data_complete.loc[(school_data_complete[\"reading_score\"] >= 70) & (school_data_complete[\"math_score\"] >= 70)])/student_sum*100\n",
+    "\n",
+    "\n",
+    "\n",
+    "# school_pct_pass_math = \n",
+    "# school_pct_pass_reading = \n",
+    "# school_passing_overall = \n",
+    "\n",
+    "# # # Create overview table to summarize all the metrics\n",
+    "school_summary_df = pd.DataFrame({\"School Type\": school_type,\n",
+    "                                  \"Total Students\": school_student_count,\n",
+    "                                  \"Total School Budget\": school_budget,\n",
+    "                                  \"Per Student Budget\": per_student_budget,\n",
+    "                                  \"Average Math Score\": school_avg_math,\n",
+    "                                  \"Average Reading Score\": school_avg_reading,\n",
+    "                                  \"% Passing Math\": school_pct_pass_math\n",
     "#                                    \"% Passing Reading\": [school_pct_pass_reading],\n",
     "#                                    \"% Passing Overall\": [school_passing_overall]\n",
     "                        })\n",
     "\n",
+    "# grouped_school_df.count().head()\n",
     "school_summary_df"
    ]
   },
