really really close

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1339,13 +1339,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Overall</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spend Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>550 to 599</td>\n",
+       "      <td>83.43</td>\n",
+       "      <td>83.89</td>\n",
+       "      <td>93.54</td>\n",
+       "      <td>96.46</td>\n",
+       "      <td>95.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>600 to 649</td>\n",
+       "      <td>79.42</td>\n",
+       "      <td>82.04</td>\n",
+       "      <td>76.83</td>\n",
+       "      <td>86.73</td>\n",
+       "      <td>81.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>650 to 700</td>\n",
+       "      <td>76.96</td>\n",
+       "      <td>81.06</td>\n",
+       "      <td>66.22</td>\n",
+       "      <td>81.09</td>\n",
+       "      <td>73.66</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "Spend Group                                                              \n",
+       "550 to 599                83.43                  83.89           93.54   \n",
+       "600 to 649                79.42                  82.04           76.83   \n",
+       "650 to 700                76.96                  81.06           66.22   \n",
+       "\n",
+       "             % Passing Reading  % Passing Overall  \n",
+       "Spend Group                                        \n",
+       "550 to 599               96.46              95.00  \n",
+       "600 to 649               86.73              81.78  \n",
+       "650 to 700               81.09              73.66  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# binning exercise\n",
     "# columns: avg math score, avg reading score, % pass math, % pass reading, % overall pass rate\n",
-    "# rows: dependent bins ... small med large ... spending ranges"
+    "# rows: dependent bins ... small med large ... spending ranges\n",
+    "\n",
+    "# Create bins in which to place values based upon average per student spending\n",
+    "bins = [550, 600, 650, 700]\n",
+    "        \n",
+    "# Create labels for these bins\n",
+    "group_labels = [\"550 to 599\", \"600 to 649\", \"650 to 700\"]\n",
+    "                \n",
+    "# Slice the data and place it into bins\n",
+    "pd.cut(school_summary_df[\"Per Student Budget\"], bins, labels=group_labels).head()\n",
+    "\n",
+    "# Place the data series into new columns inside of the DataFrame\n",
+    "school_summary_df[\"Spend Group\"] = pd.cut(school_summary_df[\"Per Student Budget\"], bins, labels=group_labels)\n",
+    "# school_summary_df\n",
+    "\n",
+    "# Create a GroupBy object based upon \"Spend Group\"\n",
+    "spending_group = school_summary_df.groupby(\"Spend Group\")\n",
+    "\n",
+    "# Find how many rows fall into each bin\n",
+    "# print(spending_group[\"Total Students\"].count())\n",
+    "\n",
+    "# Get the average of each column within the GroupBy object\n",
+    "spending_group[[\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Passing Overall\"]].mean().round(2)"
    ]
   },
   {
