--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "Wright High School                 96.61              94.97  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
     "# school_name = grouped_school_df[\"school_name\"].count()\n",
     "school_type = grouped_school_df[\"type\"].unique()\n",
     "school_student_count = grouped_school_df[\"Student ID\"].count()\n",
-    "school_budget = grouped_school_df[\"budget\"].unique().\n",
+    "school_budget = grouped_school_df[\"budget\"].unique()\n",
     "per_student_budget = school_budget / school_student_count\n",
     "school_avg_math = grouped_school_df[\"math_score\"].mean().round(2)\n",
     "school_avg_reading = grouped_school_df[\"reading_score\"].mean().round(2)\n",
@@ -1441,7 +1441,6 @@
     "\n",
     "# Place the data series into new columns inside of the DataFrame\n",
     "school_summary_df[\"Spend Group\"] = pd.cut(school_summary_df[\"Per Student Budget\"], bins, labels=group_labels)\n",
-    "# school_summary_df\n",
     "\n",
     "# Create a GroupBy object based upon \"Spend Group\"\n",
     "spending_group = school_summary_df.groupby(\"Spend Group\")\n",
@@ -1469,15 +1468,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Overall</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0 to 1999</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>83.88</td>\n",
+       "      <td>93.58</td>\n",
+       "      <td>96.59</td>\n",
+       "      <td>95.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000 to 3999</td>\n",
+       "      <td>78.11</td>\n",
+       "      <td>81.56</td>\n",
+       "      <td>72.04</td>\n",
+       "      <td>83.62</td>\n",
+       "      <td>77.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4000 to 6000</td>\n",
+       "      <td>77.14</td>\n",
+       "      <td>80.98</td>\n",
+       "      <td>66.50</td>\n",
+       "      <td>81.34</td>\n",
+       "      <td>73.92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "Size Group                                                                \n",
+       "0 to 1999                  83.50                  83.88           93.58   \n",
+       "2000 to 3999               78.11                  81.56           72.04   \n",
+       "4000 to 6000               77.14                  80.98           66.50   \n",
+       "\n",
+       "              % Passing Reading  % Passing Overall  \n",
+       "Size Group                                          \n",
+       "0 to 1999                 96.59              95.09  \n",
+       "2000 to 3999              83.62              77.84  \n",
+       "4000 to 6000              81.34              73.92  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# binning exercise\n",
     "# columns: avg math score, avg reading score, % pass math, % pass reading, % overall pass rate\n",
-    "# rows: dependent bins ... small med large ... under 1k, 1k-2k, over 2k"
+    "# rows: dependent bins ... small med large ... school size\n",
+    "\n",
+    "# Create bins in which to place values based upon school size\n",
+    "bins = [0, 2000, 4000, 6000]\n",
+    "        \n",
+    "# Create labels for these bins\n",
+    "group_labels = [\"0 to 1999\", \"2000 to 3999\", \"4000 to 6000\"]\n",
+    "                \n",
+    "# Slice the data and place it into bins\n",
+    "pd.cut(school_summary_df[\"Total Students\"], bins, labels=group_labels).head()\n",
+    "\n",
+    "# Place the data series into new columns inside of the DataFrame\n",
+    "school_summary_df[\"Size Group\"] = pd.cut(school_summary_df[\"Total Students\"], bins, labels=group_labels)\n",
+    "\n",
+    "# Create a GroupBy object based upon \"Size Group\"\n",
+    "size_group = school_summary_df.groupby(\"Size Group\")\n",
+    "\n",
+    "# Find how many rows fall into each bin\n",
+    "# print(size_group[\"Total Students\"].count())\n",
+    "\n",
+    "# Get the average of each column within the GroupBy object\n",
+    "size_group[[\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Passing Overall\"]].mean().round(2)"
    ]
   },
   {
@@ -1496,13 +1599,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001756945DFC8>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# take df from scores by school size\n",
     "# columns: avg math score, avg reading score, % pass math, % pass reading, % overall pass rate\n",
-    "# two rows: charter or district"
+    "# rows: two school types\n",
+    "\n",
+    "# Create a GroupBy object based upon \"School Type\"\n",
+    "type_group = school_summary_df.groupby([\"School Type\"])\n",
+    "\n",
+    "# Get the average of each column within the GroupBy object\n",
+    "type_group[[\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Passing Overall\"]].mean().round(2)"
    ]
   },
   {
